<resources>
    <string name="app_name">GPA_Campoverdea4_Calculator</string>
    <string name="grade_calculator">Grade Calculator</string>
    <string name="grade_1">Grade 1:</string>
    <string name="grade_2">Grade 2:</string>
    <string name="grade_3">Grade 3:</string>
    <string name="grade_4">Grade 4:</string>
    <string name="grade_5">Grade 5:</string>
    <string name="zeros">0.0</string>
    <string name="calculate">Compute GPA</string>
    <string name="clear">Clear</string>
    <string name="total">Total</string>
</resources>