<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="603dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/grade_calculator"
            android:textSize="30sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/grade_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:text="@string/grade_1"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_grade_one"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grade_one"
            app:layout_constraintTop_toBottomOf="@+id/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_one_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zeros"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/grade_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:text="@string/grade_2"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grade_one" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_grade_two"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grade_two"
            app:layout_constraintTop_toBottomOf="@+id/input_grade_one">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_two_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zeros"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/grade_three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:text="@string/grade_3"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grade_two" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_grade_three"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grade_three"
            app:layout_constraintTop_toBottomOf="@+id/input_grade_two">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_three_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zeros"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/grade_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:text="@string/grade_4"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grade_three" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_grade_four"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grade_four"
            app:layout_constraintTop_toBottomOf="@+id/input_grade_three">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_four_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zeros"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/grade_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="45dp"
            android:text="@string/grade_5"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/grade_four" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_grade_five"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toEndOf="@+id/grade_five"
            app:layout_constraintTop_toBottomOf="@+id/input_grade_four">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/grade_five_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/zeros"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_calculate"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/calculate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbl_total" />


        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="70dp"
            android:text="@string/total"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_grade_five" />

        <TextView
            android:id="@+id/lbl_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="108dp"
            android:layout_marginTop="70dp"
            android:text="@string/zeros"
            app:layout_constraintStart_toEndOf="@+id/total"
            app:layout_constraintTop_toBottomOf="@+id/input_grade_five" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
